--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,11 @@
 name: goreleaser
 
 on:
-  pull_request:
   push:
+    branches:    
+      - main
+    tags:        
+      - "*"
 
 permissions:
   contents: write
