--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,5 +24,17 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
 
+      - name: Use cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+            ~/Library/Caches/go-build
+            %LocalAppData%\go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
       - name: Test
         run: go test ./...
