--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,8 +1,10 @@
 name: golangci-lint
 
-on:
-  - push
-  - pull_request
+on: 
+  push:
+    branches:
+      - "*"
+  pull_request:
 
 permissions:
   contents: read
