--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,4 +1,3 @@
-project_name: gh-action-test
 before:
   hooks:
     - go mod tidy
@@ -23,24 +22,43 @@ universal_binaries:
   - replace: true
 dockers:
   - image_templates:
-    - "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}"
-    - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}"
-    - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}"
-    - "ghcr.io/korylprince/{{ .ProjectName }}:latest"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:{{ .Tag }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:v{{ .Major }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:v{{ .Major }}.{{ .Minor }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:latest"
+    use: buildx
     goarch: amd64
     build_flag_templates:
-    - "--build-arg=BUILD_PATH={{ .ProjectName }}"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.title={{.ProjectName}}"
+      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+      - "--label=org.opencontainers.image.version={{.Version}}"
+      - "--label=org.opencontainers.image.source={{.GitURL}}"
+      - "--platform=linux/amd64"
+      - "--build-arg=EXECUTABLE={{ .ProjectName }}"
   - image_templates:
-    - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Tag }}"
-    - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:v{{ .Major }}"
-    - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:v{{ .Major }}.{{ .Minor }}"
-    - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:latest"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Tag }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:v{{ .Major }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:v{{ .Major }}.{{ .Minor }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:latest"
+    use: buildx
     goarch: arm64
     build_flag_templates:
-    - "--build-arg=BUILD_PATH={{ .ProjectName }}"
+      - "--pull"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.title={{.ProjectName}}"
+      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+      - "--label=org.opencontainers.image.version={{.Version}}"
+      - "--label=org.opencontainers.image.source={{.GitURL}}"
+      - "--platform=linux/arm64"
+      - "--build-arg=EXECUTABLE={{ .ProjectName }}"
 
 docker_manifests:
 - name_template: "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}"
   image_templates:
-  - "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}"
-  - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Tag }}"
+    - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:{{ .Tag }}"
+    - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Tag }}"
+- name_template: "ghcr.io/korylprince/{{ .ProjectName }}:latest"
+  image_templates:
+    - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:{{ .Tag }}"
+    - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Tag }}"
