use bare binary for archives

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -9,15 +9,13 @@ builds:
       - windows
       - darwin
 archives:
-  - replacements:
+  - format: binary
+    replacements:
       darwin: macOS
       linux: Linux
       windows: Windows
       386: i386
       amd64: x86_64
-    format_overrides:
-      - goos: windows
-        format: zip
 universal_binaries:
   - replace: true
 dockers:
