--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,8 @@ jobs:
 
       - name: Set up Go
         uses: actions/setup-go@v2
+        with:
+          go-version: "^1"
 
       - name: Use cache
         uses: actions/cache@v2
