clean up docker and a few other changes

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,6 +1,7 @@
 before:
   hooks:
     - go mod tidy
+
 builds:
   - env:
       - CGO_ENABLED=0
@@ -8,16 +9,22 @@ builds:
       - linux
       - windows
       - darwin
+    goarch:
+      - amd64
+      - arm64
+      - arm
+    goarm:
+      - "7"
+
 archives:
   - format: binary
     replacements:
-      darwin: macOS
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+      darwin: macos
+      windows: win
+
 universal_binaries:
   - replace: true
+
 dockers:
   - image_templates:
       - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:{{ .Tag }}"
@@ -36,6 +43,27 @@ dockers:
       - "--build-arg=GO_PROJECT_NAME={{ .ProjectName }}"
     extra_files:
       - docker-entrypoint.sh
+
+  - image_templates:
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:{{ .Tag }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:v{{ .Major }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:v{{ .Major }}.{{ .Minor }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:latest"
+    use: buildx
+    goarch: arm
+    goarm: "7"
+    build_flag_templates:
+      - "--pull"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.title={{.ProjectName}}"
+      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+      - "--label=org.opencontainers.image.version={{.Version}}"
+      - "--label=org.opencontainers.image.source={{.GitURL}}"
+      - "--platform=linux/arm"
+      - "--build-arg=GO_PROJECT_NAME={{ .ProjectName }}"
+    extra_files:
+      - docker-entrypoint.sh
+
   - image_templates:
       - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Tag }}"
       - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:v{{ .Major }}"
@@ -56,11 +84,26 @@ dockers:
       - docker-entrypoint.sh
 
 docker_manifests:
-- name_template: "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}"
-  image_templates:
-    - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:{{ .Tag }}"
-    - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Tag }}"
-- name_template: "ghcr.io/korylprince/{{ .ProjectName }}:latest"
-  image_templates:
-    - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:{{ .Tag }}"
-    - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Tag }}"
+  - name_template: "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}"
+    image_templates:
+      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:{{ .Tag }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Tag }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:{{ .Tag }}"
+
+  - name_template: "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Major }}"
+    image_templates:
+      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:{{ .Major }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Major }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:{{ .Major }}"
+
+  - name_template: "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Major }}.{{ .Minor }}"
+    image_templates:
+      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:{{ .Major }}.{{ .Minor }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Major }}.{{ .Minor }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:{{ .Major }}.{{ .Minor }}"
+
+  - name_template: "ghcr.io/korylprince/{{ .ProjectName }}:latest"
+    image_templates:
+      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:{{ .Tag }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Tag }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:{{ .Tag }}"
