--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,7 +22,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17
+          go-version: "^1"
+          check-latest: true
 
       - name: Sign into GitHub Container Registry
         uses: docker/login-action@v1
@@ -39,3 +40,18 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Delete intermediate amd64 Packages
+        uses: actions/delete-package-versions@v2
+        with:
+          package-name: ${{ github.event.repository.name }}-amd64
+
+      - name: Delete intermediate arm64 Packages
+        uses: actions/delete-package-versions@v2
+        with:
+          package-name: ${{ github.event.repository.name }}-arm64
+
+      - name: Delete intermediate amd Packages
+        uses: actions/delete-package-versions@v2
+        with:
+          package-name: ${{ github.event.repository.name }}-amd
