--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,18 +43,18 @@ jobs:
 
       - name: Delete intermediate Packages
         run: |
-          curl --request POST \
+          curl --request DELETE \
           --url 'https://api.github.com/users/${{ github.repository_owner }}/packages/container/${{ github.event.repository.name }}-amd64' \
-          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-          --header 'content-type: application/json' \
+          --header 'Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+          --header "Accept: application/vnd.github.v3+json" \
           --fail
-          curl --request POST \
+          curl --request DELETE \
           --url 'https://api.github.com/users/${{ github.repository_owner }}/packages/container/${{ github.event.repository.name }}-arm64' \
           --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-          --header 'content-type: application/json' \
+          --header "Accept: application/vnd.github.v3+json" \
           --fail
-          curl --request POST \
+          curl --request DELETE \
           --url 'https://api.github.com/users/${{ github.repository_owner }}/packages/container/${{ github.event.repository.name }}-arm' \
           --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-          --header 'content-type: application/json' \
+          --header "Accept: application/vnd.github.v3+json" \
           --fail
