--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -27,10 +27,10 @@ universal_binaries:
 
 dockers:
   - image_templates:
-      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:{{ .Tag }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:v{{ .Major }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:v{{ .Major }}.{{ .Minor }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:latest"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}-amd64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}-amd64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}-amd64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:latest-amd64"
     use: buildx
     goarch: amd64
     build_flag_templates:
@@ -45,10 +45,10 @@ dockers:
       - docker-entrypoint.sh
 
   - image_templates:
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:{{ .Tag }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:v{{ .Major }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:v{{ .Major }}.{{ .Minor }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:latest"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}-arm"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}-arm"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}-arm"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:latest-arm"
     use: buildx
     goarch: arm
     goarm: "7"
@@ -65,10 +65,10 @@ dockers:
       - docker-entrypoint.sh
 
   - image_templates:
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Tag }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:v{{ .Major }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:v{{ .Major }}.{{ .Minor }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:latest"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}-arm64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}-arm64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}-arm64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:latest-arm64"
     use: buildx
     goarch: arm64
     build_flag_templates:
@@ -86,24 +86,24 @@ dockers:
 docker_manifests:
   - name_template: "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}"
     image_templates:
-      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:{{ .Tag }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Tag }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:{{ .Tag }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}-amd64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}-arm64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}-arm"
 
   - name_template: "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}"
     image_templates:
-      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:v{{ .Major }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:v{{ .Major }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:v{{ .Major }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}-amd64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}-arm64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}-arm"
 
   - name_template: "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}"
     image_templates:
-      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:v{{ .Major }}.{{ .Minor }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:v{{ .Major }}.{{ .Minor }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:v{{ .Major }}.{{ .Minor }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}-amd64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}-arm64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}-arm"
 
   - name_template: "ghcr.io/korylprince/{{ .ProjectName }}:latest"
     image_templates:
-      - "ghcr.io/korylprince/{{ .ProjectName }}-amd64:{{ .Tag }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm64:{{ .Tag }}"
-      - "ghcr.io/korylprince/{{ .ProjectName }}-arm:{{ .Tag }}"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}-amd64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}-arm64"
+      - "ghcr.io/korylprince/{{ .ProjectName }}:{{ .Tag }}-arm"
